--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "folio",
   "version": "0.1.0",
-  "homepage": "https://canhhuy116.github.io/Folio",
+  "homepage": "https://canhhuy116.github.io/FolioProject",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
