--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,23 @@
 {
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"]
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier-scss"],
+  "plugins": ["stylelint-scss"],
+  "rules": {
+    "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
+    "color-function-notation": "legacy",
+    "rule-empty-line-before": [
+      "always",
+      {
+        "except": ["first-nested"]
+      }
+    ],
+    "custom-property-pattern": [
+      "^[a-z][a-zA-Z0-9]+$",
+      {
+        "ignoreSelectors": ["root"]
+      }
+    ],
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "scss/dollar-variable-pattern": "(^[a-z]|[A-Z0-9])[a-z]*"
+  }
 }
