--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stylelint-scss": "^4.3.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -26,7 +27,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
+    "test-all": "npm run lint && npm run check-format",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +72,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^4.0.0"
+    "stylelint-config-standard-scss": "^4.0.0",
+    "husky": "^8.0.0"
   }
 }
