--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "stylelint-scss": "^4.3.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -26,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
+    "lint": "eslint . && npx stylelint **/*.scss",
     "lint:fix": "eslint --fix .",
     "check-format": "prettier --check .",
     "format": "prettier --write .",
@@ -69,6 +68,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
+    "stylelint-scss": "^4.3.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard": "^26.0.0",
