--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
+    "lint": "eslint . && npx stylelint **/*.scss",
     "lint:fix": "eslint --fix .",
     "check-format": "prettier --check .",
     "format": "prettier --write .",
